--- a/src/components/Services/index.css
+++ b/src/components/Services/index.css
@@ -225,8 +225,16 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
   justify-content: space-around;
   padding-top: 40px;
   padding-left: 120px;
   padding-right: 120px;
+  margin: 10px;
+}
+.category-image {
+  width: 100%; /* Adjust the width as needed */
+  height: auto; /* Maintain the aspect ratio */
+  border-radius: 8px; /* Optional: Add rounded corners */
+  margin-bottom: 10px; /* Optional: Adjust spacing between image and content */
 }
